--- a/com.bulbas23r.client.gateway/src/main/resources/application.yml
+++ b/com.bulbas23r.client.gateway/src/main/resources/application.yml
@@ -6,19 +6,23 @@ spring:
 
   cloud:
     gateway:
-      routes:  # Spring Cloud Gateway의 라우팅 설정
+      routes: # Spring Cloud Gateway의 라우팅 설정
         - id: order-service  # 라우트 식별자
           uri: lb://order-service  # ‘order-service’라는 이름으로 로드 밸런싱된 서비스로 라우팅
           predicates:
             - Path=/api/orders/**  # /order/** 경로로 들어오는 요청을 이 라우트로 처리
-#        - id: product-service  # 라우트 식별자
-#          uri: lb://product-service  # ‘product-service’라는 이름으로 로드 밸런싱된 서비스로 라우팅
-#          predicates:
-#            - Path=/product/**  # /product/** 경로로 들어오는 요청을 이 라우트로 처리
-#        - id: auth-service
-#          uri: lb://auth-service
-#          predicates:
-#            - Path=/auth/**
+        #        - id: product-service  # 라우트 식별자
+        #          uri: lb://product-service  # ‘product-service’라는 이름으로 로드 밸런싱된 서비스로 라우팅
+        #          predicates:
+        #            - Path=/product/**  # /product/** 경로로 들어오는 요청을 이 라우트로 처리
+        #        - id: auth-service
+        #          uri: lb://auth-service
+        #          predicates:
+        #            - Path=/auth/**
+        - id: hub-service
+          uri: lb://hub-service
+          predicates:
+            - Path=/api/hubs/**
       discovery:
         locator:
           enabled: true  # 서비스 디스커버리를 통해 동적으로 라우트를 생성하도록 설정
