chore: swagger config

--- a/com.bulbas23r.client.gateway/src/main/resources/application.yml
+++ b/com.bulbas23r.client.gateway/src/main/resources/application.yml
@@ -11,18 +11,18 @@ spring:
           uri: lb://order-service  # ‘order-service’라는 이름으로 로드 밸런싱된 서비스로 라우팅
           predicates:
             - Path=/api/orders/**, /order-service/v3/api-docs
-      #        - id: product-service  # 라우트 식별자
-      #          uri: lb://product-service  # ‘product-service’라는 이름으로 로드 밸런싱된 서비스로 라우팅
-      #          predicates:
-      #            - Path=/product/**  # /product/** 경로로 들어오는 요청을 이 라우트로 처리
-      #        - id: auth-service
-      #          uri: lb://auth-service
-      #          predicates:
-      #            - Path=/auth/**
+        #        - id: product-service  # 라우트 식별자
+        #          uri: lb://product-service  # ‘product-service’라는 이름으로 로드 밸런싱된 서비스로 라우팅
+        #          predicates:
+        #            - Path=/product/**  # /product/** 경로로 들어오는 요청을 이 라우트로 처리
+        #        - id: auth-service
+        #          uri: lb://auth-service
+        #          predicates:
+        #            - Path=/auth/**
         - id: hub-service
           uri: lb://hub-service
           predicates:
-            - Path=/api/hubs/**
+            - Path=/api/hubs/**, /hub-service/v3/api-docs
       discovery:
         locator:
           enabled: true  # 서비스 디스커버리를 통해 동적으로 라우트를 생성하도록 설정
@@ -41,3 +41,13 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:19090/eureka/
+
+springdoc:
+  swagger-ui:
+    urls[0]:
+      name: order-service
+      url: /order-service/v3/api-docs
+    urls[1]:
+      name: hub-service
+      url: /hub-service/v3/api-docs
+    use-root-path: true
