--- a/com.bulbas23r.client.hub/src/main/resources/application.yml
+++ b/com.bulbas23r.client.hub/src/main/resources/application.yml
@@ -13,3 +13,12 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:19090/eureka/
+
+springdoc:
+  api-docs:
+    version: openapi_3_1
+    enabled: true
+    path: /hub-service/v3/api-docs
+  enable-spring-security: true
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
