--- a/com.bulbas23r.common/build.gradle
+++ b/com.bulbas23r.common/build.gradle
@@ -1,3 +1,5 @@
+import org.springframework.boot.gradle.plugin.SpringBootPlugin
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.3' apply false
