chore: hub initial data.sql

--- a/com.bulbas23r.client.hub/src/main/resources/application.yml
+++ b/com.bulbas23r.client.hub/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
       discovery:
         enabled: true
         service-id: config-server
+  sql:
+    init:
+      mode: always
 
 eureka:
   client:
