feat: 업체 검색 추가
- queryDsl 추가

#4

--- a/com.bulbas23r.client.gateway/src/main/resources/application.yml
+++ b/com.bulbas23r.client.gateway/src/main/resources/application.yml
@@ -50,4 +50,7 @@ springdoc:
     urls[1]:
       name: hub-service
       url: /hub-service/v3/api-docs
+    urls[2]:
+      name: company-service
+      url: /company-service/v3/api-docs
     use-root-path: true
