--- a/com.bulbas23r.client.company/src/main/resources/application.yml
+++ b/com.bulbas23r.client.company/src/main/resources/application.yml
@@ -1,30 +1,24 @@
 spring:
   application:
     name: company-service
+  config:
+    import: configserver:http://localhost:18080
   cloud:
     config:
-      enabled: false
-  datasource:
-    url: jdbc:postgresql://localhost:5432/bulbasaur
-    username: root
-    password: root
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    properties:
-      hibernate:
-        default_schema: company_schema
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-
-
-
-server:
-  port: 19094
+      discovery:
+        enabled: true
+        service-id: config-server
 
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:19090/eureka/
+
+springdoc:
+  api-docs:
+    version: openapi_3_1
+    enabled: true
+    path: /company-service/v3/api-docs
+  enable-spring-security: true
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
