--- a/com.bulbas23r.client.product/src/main/resources/application.yml
+++ b/com.bulbas23r.client.product/src/main/resources/application.yml
@@ -1,44 +1,25 @@
 spring:
   application:
     name: product-service
-
+  config:
+    import: configserver:http://localhost:18080
   cloud:
     config:
-      enabled: false
-
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/bulbasaur
-    username: root
-    password: root
-
-# JPA ??
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        default_schema: product_schema
-
-
-server:
-  port: 19095
+      discovery:
+        enabled: true
+        service-id: config-server
 
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:19090/eureka/
 
-
-
-#management:
-#  zipkin:
-#    tracing:
-#      endpoint: "http://localhost:9411/api/v2/spans"
-#  tracing:
-#    sampling:
-#      probability: 1.0
-
+springdoc:
+  api-docs:
+    version: openapi_3_1
+    enabled: true
+    path: /product-service/v3/api-docs
+  enable-spring-security: true
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
 
