--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@ include ':com.bulbas23r.client.message'
 include ':com.bulbas23r.client.order'
 include ':com.bulbas23r.client.product'
 include ':com.bulbas23r.client.user'
+include ':com.bulbas23r.client.auth'
 include ':com.bulbas23r.common'
