--- a/com.bulbas23r.client.auth/src/main/resources/application.yml
+++ b/com.bulbas23r.client.auth/src/main/resources/application.yml
@@ -1,31 +1,26 @@
 spring:
   application:
     name: auth-service
-  jpa:
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        format_sql: true
-        show_sql: true
-        default_schema: USER_SCHEMA
-  data:
-    redis:
-      host: localhost
-      port: 6379
-
-  datasource:
-    url: jdbc:postgresql://localhost:5432/bulbasaur
-    username: root
-    password: root
-    driver-class-name: org.postgresql.Driver
-    hikari:
-      schema: USER_SCHEMA
-
+  config:
+    import: configserver:http://localhost:18080
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: config-server
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:19090/eureka/
 
 jwt:
-  key: "sdlfkajdjfkladkfjalkdfaldkfalkdflkadjldfkakdjlfaksdfalkdfd"
+  key: ${jwt_key}
+
+springdoc:
+  api-docs:
+    version: openapi_3_1
+    enabled: true
+    path: /auth-service/v3/api-docs
+  enable-spring-security: true
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
