--- a/com.bulbas23r.client.gateway/src/main/resources/application.yml
+++ b/com.bulbas23r.client.gateway/src/main/resources/application.yml
@@ -18,11 +18,11 @@ spring:
         - id: user-service
           uri: lb://user-service
           predicates:
-            - Path=/api/users/**
+            - Path=/api/users/**, /user-service/v3/api-docs
         - id: auth-service
           uri: lb://auth-service
           predicates:
-            - Path=/api/auth/**
+            - Path=/api/auth/**, /auth-service/v3/api-docs
 
       discovery:
         locator:
@@ -51,10 +51,19 @@ springdoc:
     urls[1]:
       name: hub-service
       url: /hub-service/v3/api-docs
+    urls[2]:
+      name: product-service
+      url: /product-service/v3/api-docs
+    urls[3]:
+      name: company-service
+      url: /company-service/v3/api-docs
+    urls[4]:
+      name: user-service
+      url: /user-service/v3/api-docs
+    urls[5]:
+      name: auth-service
+      url: /auth-service/v3/api-docs
     use-root-path: true
-
-jwt:
-  key: "asdkfjaldjfkadlkfdkfalkdfaldkfalsdkfakdfklsajdfk"
 
 logging:
   level:
