--- a/com.bulbas23r.client.gateway/src/main/resources/application.yml
+++ b/com.bulbas23r.client.gateway/src/main/resources/application.yml
@@ -72,3 +72,6 @@ springdoc:
       name: auth-service
       url: /auth-service/v3/api-docs
     use-root-path: true
+
+auth:
+  url: "http://localhost:8080/api/auth"
