chore: order용 api-doc 설정

--- a/com.bulbas23r.client.gateway/src/main/resources/application.yml
+++ b/com.bulbas23r.client.gateway/src/main/resources/application.yml
@@ -56,4 +56,7 @@ springdoc:
     urls[3]:
       name: company-service
       url: /company-service/v3/api-docs
+    urls[4]:
+      name: order-service
+      url: /order-service/v3/api-docs
     use-root-path: true
