--- a/com.bulbas23r.client.hub/build.gradle
+++ b/com.bulbas23r.client.hub/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
     implementation project(':com.bulbas23r.common')
 }
 
