--- a/com.bulbas23r.client.hub/build.gradle
+++ b/com.bulbas23r.client.hub/build.gradle
@@ -55,6 +55,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
+    // swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+
     implementation project(':com.bulbas23r.common')
 }
 
