[fix] FeignInterceptor 구현 및 User 관련 클래스 수정

--- a/com.bulbas23r.client.gateway/src/main/resources/application.yml
+++ b/com.bulbas23r.client.gateway/src/main/resources/application.yml
@@ -89,9 +89,10 @@ springdoc:
     urls[7]:
         name: delivery-service
         url: /delivery-service/v3/api-docs
-    urls[6]:
+    urls[8]:
       name: message-service
       url: /message-service/v3/api-docs
     use-root-path: true
 
+auth:
   url: "http://localhost:18081/api/auth"
