feat: kafka 사용 설정

--- a/com.bulbas23r.client.product/src/main/resources/application.yml
+++ b/com.bulbas23r.client.product/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
       discovery:
         enabled: true
         service-id: config-server
+  kafka:
+    consumer:
+      group-id: order-group
 
 eureka:
   client:
