--- a/com.bulbas23r.client.hub/build.gradle
+++ b/com.bulbas23r.client.hub/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     // swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
     implementation project(':com.bulbas23r.common')
 }
 
