--- a/com.bulbas23r.client.message/build.gradle
+++ b/com.bulbas23r.client.message/build.gradle
@@ -28,7 +28,8 @@ ext {
 }
 
 dependencies {
-	testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
+//	testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
+	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
 
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
